# AsyncGSM

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TESTING_DOCS_SUMMARY.md  TODO.md  UNIT_TESTING_ISSUE.md  library.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unit_testing.md
.github/workflows/: ci.yml  formatting.yml
docs/: AGENTS.md  TESTING.md  sendCommand_improvements.md
examples/: CMakeLists.txt
examples/basic/src/: main.cpp
examples/basic/test/test_at_handler/: main.cpp
examples/gsm/: platformio.ini
examples/gsm/src/: main.cpp
examples/gsm/test/test_gsm/: main.cpp  mocks.h
examples/http_client/: platformio.ini
examples/http_client/src/: main.cpp
examples/http_client/test/test_http_client/: main.cpp  mocks.h
makefiles/: development.mk  test.mk  variables.mk
src/: AsyncGSM.commands.cpp  AsyncGSM.cpp  AsyncGSM.h  AsyncGuard.h  AsyncMqttGSM.cpp  AsyncMqttGSM.h  AsyncSecureGSM.cpp  AsyncSecureGSM.h  GSMTransport.cpp  GSMTransport.h
src/AsyncMqttGSM/: AsyncMqttGSM.cpp  AsyncMqttGSM.h
src/AsyncSecureGSM/: AsyncSecureGSM.cpp  AsyncSecureGSM.h
src/AsyncSecureMqttGSM/: AsyncSecureMqttGSM.cpp  AsyncSecureMqttGSM.h
src/EG915/: EG915.cpp  EG915.h  EG915.modem.cpp  EG915.secure.cpp  EG915.settings.h  EG915.urc.cpp
src/EG915/docs/: Secure.md
src/GSMContext/: GSMContext.cpp  GSMContext.h
src/GSMContext/docs/: Context.md
src/MqttQueue/: MqttQueue.cpp  MqttQueue.h
src/docs/: MQTT.md
src/modules/EG915/: EG915.cpp  EG915.h  EG915.modem.cpp  EG915.secure.cpp  EG915.settings.h  EG915.urc.cpp
src/modules/EG915/MQTT/: MQTT.cpp  MQTT.h
src/modules/EG915/ModemInfo/: ModemInfo.cpp  ModemInfo.h
src/modules/EG915/Network/: Network.cpp  Network.h
src/modules/EG915/SIMCard/: SIMCard.cpp  SIMCard.h  SIMCard.settings.h
src/modules/EG915/Socket/: Socket.cpp  Socket.h  SocketSecure.cpp  UFSFiles.cpp
src/modules/EG915/docs/: Secure.md
src/modules/Modem/: Modem.h  Modem.settings.h  ModemBackend.h
src/modules/Modem/SIMCard/: SIM.h  SIM.settings.h
src/modules/iGSMModule/: iGSMModule.h
src/modules/iGSMModule/iGSMModemInfo/: iGSMModemInfo.h
src/modules/iGSMModule/iGSMNetwork/: iGSMNetwork.h  iGSMNetwork.types.h
src/modules/iGSMModule/iMQTT/: iMQTT.h  iMQTT.types.h
src/modules/iGSMModule/iSIMCard/: iSIMCard.h  iSIMCard.types.h
src/modules/iGSMModule/iSocket/: iSocket.h  iSocket.types.h
src/utils/GSMTransport/: GSMTransport.cpp  GSMTransport.h
src/utils/MqttQueue/: MqttQueue.cpp  MqttQueue.h
test/: CMakeLists.txt  test_asyncgsm.cpp
test/mocks/: Arduino.h  Client.h  IPAddress.h  Stream.h  WString.h
test/mocks/freertos/: FreeRTOS.h  FreeRTOSConfig.h  freertos_hooks.c
test/test_hardware/: platformio.ini
test/test_hardware/src/: main.cpp
test/test_hardware/test/test_at_handle/: main.cpp  mocks.h
test/test_native/: common.h  test_async_gsm_gprs.cpp  test_async_gsm_http_client.cpp  test_async_secure_gsm.cpp  test_cacert_update.cpp  test_gsm_context_shared.cpp  test_modem_getters.cpp  test_mqtt_urc.cpp  test_mqtts_secure.cpp  test_send_sync.cpp  test_sim_qdsim.cpp  test_urc_registration.cpp
test/test_native/common/: common.h  responder.h
